cmake_minimum_required(VERSION 4.0)
project(data_types_and_structures)

set(CMAKE_CXX_STANDARD 14)

add_executable(A Sorting/A.cpp)
add_executable(B Sorting/B.cpp)
add_executable(C Sorting/C.cpp)
add_executable(D Sorting/D.cpp)
add_executable(E Sorting/E.cpp)
add_executable(F Sorting/F.cpp)
add_executable(G Sorting/G.cpp)
add_executable(H Sorting/H.cpp)
add_executable(I Sorting/I.cpp)
